# evoxel

./: Cargo.toml  README.md
crates/evoxel/: Cargo.toml  README.md
crates/evoxel-cli/: Cargo.toml  README.md
crates/evoxel-cli/src/: main.rs
crates/evoxel-cli/src/commands/: test.rs
crates/evoxel-core/: Cargo.toml  README.md
crates/evoxel-core/src/: data_frame_utils.rs  error.rs  info.rs  lib.rs  voxel_grid.rs
crates/evoxel-io/: Cargo.toml  README.md
crates/evoxel-io/src/: document.rs  error.rs  lib.rs  read.rs  write.rs  write_impl.rs
crates/evoxel-transform/: Cargo.toml  README.md
crates/evoxel-transform/src/: error.rs  filter.rs  lib.rs  translate.rs
crates/evoxel/src/: lib.rs
