[workspace]
members = [
    "crates/*"
]

[workspace.package]
version = "0.0.1-alpha.1"
authors = ["Benedikt Schwab"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tum-gis/evoxel"

[workspace.dependencies]
ecoord = { version = "0.0.1-alpha", registry = "custom" }

thiserror = "1.0.34"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
polars = "0.26.1"
ndarray = "0.15"
serde = "1.0"
serde_json = "1.0"
rayon = "1.5"
nalgebra = "0.31.1"
chrono = "0.4.22"
