[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.4"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/evoxel"

[workspace.dependencies]
ecoord = { version = "0.0.1-alpha.4" }

clap = "4.5.13"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
polars = "0.41.3"
ndarray = "0.16.0"
serde = "1.0.204"
serde_json = "1.0.122"
rayon = "1.10.0"
nalgebra = "0.33.0"
chrono = "0.4.38"
