[package]
name = "evoxel-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for evoxel operations"


[dependencies]
evoxel = { version = "0.0.1-alpha.1", path = "../evoxel", registry = "custom" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
