[package]
name = "evoxel-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for evoxel operations"


[dependencies]
evoxel = { version = "0.0.1-alpha.3", path = "../evoxel" }

clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nalgebra = { workspace = true }
