[package]
name = "evoxel-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core of the evoxel library"


[dependencies]
ecoord = { workspace = true }

polars = { workspace = true, features = ["lazy", "csv-file", "parquet", "ndarray", "rows"] }
ndarray = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
chrono = { workspace = true }
