[package]
name = "evoxel-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives and operations for processing 3D voxel grids."


[dependencies]
ecoord = { workspace = true }

thiserror = { workspace = true }
polars = { workspace = true, features = ["lazy", "parquet", "ndarray", "rows"] }
ndarray = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
chrono = { workspace = true }
