[package]
name = "evoxel-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IO operations for processing 3D voxel grids."


[dependencies]
evoxel-core = { version = "0.0.1-alpha.3", path = "../evoxel-core" }

ecoord = { workspace = true }

thiserror = { workspace = true }
chrono = { workspace = true }
polars = { workspace = true, features = ["lazy", "parquet", "ndarray"] }
ndarray = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
