[package]
name = "evoxel-transform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Supplementary operations for processing 3D voxel grids."


[dependencies]
evoxel-core = { version = "0.0.1-alpha.4", path = "../evoxel-core" }

ecoord = { workspace = true }

thiserror = { workspace = true }
polars = { workspace = true, features = ["lazy", "parquet", "ndarray", "partition_by"] }
chrono = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
