[package]
name = "evoxel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing 3D voxel grids"


[dependencies]
evoxel-core = { version = "0.0.1-alpha.1", path = "../evoxel-core", registry = "custom" }
evoxel-io = { version = "0.0.1-alpha.1", path = "../evoxel-io", registry = "custom" }
