[package]
name = "evoxel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing 3D point clouds."


[dependencies]
evoxel-core = { version = "0.0.1-alpha.4", path = "../evoxel-core" }
evoxel-io = { version = "0.0.1-alpha.4", path = "../evoxel-io" }
evoxel-transform = { version = "0.0.1-alpha.4", path = "../evoxel-transform" }
